# sp1

./: Cargo.toml
crates/core/machine/src/syscall/precompiles/edwards/: ed_decompress.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs
crates/recursion/gnark-ffi/: Cargo.toml
crates/recursion/gnark-ffi/src/ffi/: docker.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs  proof.rs
crates/zkvm/entrypoint/: Cargo.toml
crates/zkvm/entrypoint/src/: lib.rs
crates/zkvm/entrypoint/src/allocators/: bump.rs  embedded.rs
crates/zkvm/entrypoint/src/syscalls/: memory.rs
crates/zkvm/lib/src/: io.rs
examples/: Cargo.toml
examples/elf/: riscv32im-succinct-zkvm-elf
examples/opsuccinct-finality/: README.md  fetchstorage.js  intentstorage.js  jamstorage.js  main.rs  package-lock.json  verifyopsuccinct.js
examples/opsuccinct-finality/program/: Cargo.toml
examples/opsuccinct-finality/program/src/: main.rs
examples/opsuccinct-finality/script/: Cargo.toml
examples/opsuccinct-finality/script/src/: main.rs
examples/sp1-storage-proof/elf/: riscv32im-succinct-zkvm-elf
examples/sp1-storage-proof/lib/src/: lib.rs
examples/sp1-storage-proof/program/: Cargo.toml
examples/sp1-storage-proof/program/src/: main.rs
examples/sp1-storage-proof/script/: Cargo.toml
