[package]
name = "opsuccinct-finality-script"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
sp1-sdk = { workspace = true, features = ["native-gnark"] }
hex = "0.4.3"
alloy-primitives = "0.7.7"

[build-dependencies]
sp1-build = { workspace = true }

#[features]
#cuda = ["sp1-sdk/cuda"]
